force-app/main/default/objects/Application__c/fields/Adjudication_Response__c.field-meta.xml
<CustomField>
    <fullName>Adjudication_Response__c</fullName>
    <label>Adjudication Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>