force-app/main/default/objects/Application__c/fields/AML_Decision__c.field-meta.xml
<CustomField>
    <fullName>AML_Decision__c</fullName>
    <description>AML Decision</description>
    <inlineHelpText>AML Decision</inlineHelpText>
    <label>AML Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>