force-app/main/default/objects/Application__c/fields/AML_Decision_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>AML_Decision_Last_Changed_Date__c</fullName>
    <description>AML Decision Last Changed Date</description>
    <inlineHelpText>AML Decision Last Changed Date</inlineHelpText>
    <label>AML Decision Last Changed Date</label>
    <type>DateTime</type>
</CustomField>