force-app/main/default/objects/Application__c/fields/AML_Decision_Summary__c.field-meta.xml
<CustomField>
    <fullName>AML_Decision_Summary__c</fullName>
    <description>AML Decision Summary</description>
    <inlineHelpText>AML Decision Summary</inlineHelpText>
    <label>AML Decision Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>