force-app/main/default/objects/Application__c/fields/AML_Decision_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>AML_Decision_Timestamp__c</fullName>
    <description>AML Decision Timestamp</description>
    <inlineHelpText>AML Decision Timestamp</inlineHelpText>
    <label>AML Decision Timestamp</label>
    <type>DateTime</type>
</CustomField>