force-app/main/default/objects/Application__c/fields/AML_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>AML_Declined_Reason__c</fullName>
    <label>AML Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AML Failed</fullName>
            </value>
            <value>
                <fullName>No Hit</fullName>
            </value>
            <value>
                <fullName>System Not Reachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>