force-app/main/default/objects/Application__c/fields/AML_Response__c.field-meta.xml
<CustomField>
    <fullName>AML_Response__c</fullName>
    <label>AML Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>