force-app/main/default/objects/Application__c/fields/Application_Completed_From__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_From__c</fullName>
    <inlineHelpText>Indicates where this application was generated from.  Externally from the web form, or from an internal Canaccede/Affirms Rep</inlineHelpText>
    <label>Application Completed From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>