force-app/main/default/objects/Application__c/fields/Application_Completed_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the application was completed and submitted from the web form.</inlineHelpText>
    <label>Application Completed &amp; Submitted</label>
    <type>Checkbox</type>
</CustomField>