force-app/main/default/objects/Application__c/fields/Application_Number_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>Application_Number_AutoNumber__c</fullName>
    <description>Auto generate the application number</description>
    <displayFormat>APP{00000}</displayFormat>
    <inlineHelpText>Auto generate the application number</inlineHelpText>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>