force-app/main/default/objects/Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Approved</fullName>
            </value>
            <value>
                <fullName>System Declined</fullName>
            </value>
            <value>
                <fullName>Analyst Approved</fullName>
            </value>
            <value>
                <fullName>Analyst Declined</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Manually Approved</fullName>
            </value>
            <value>
                <fullName>Manually Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>