force-app/main/default/objects/Application__c/fields/Application_Status_Last_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Last_Changed_Date__c</fullName>
    <description>Application Status Last Changed Date</description>
    <inlineHelpText>Application Status Last Changed Date</inlineHelpText>
    <label>Application Status Last Changed Date</label>
    <type>DateTime</type>
</CustomField>