force-app/main/default/objects/Application__c/fields/applications_approved__c.field-meta.xml
<CustomField>
    <fullName>applications_approved__c</fullName>
    <formula>IF( 
OR(  ISPICKVAL(Decision__c,&apos;Completed&apos;),
      ISPICKVAL(Decision__c,&apos;Approved&apos;)) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applications Approved</label>
    <type>Checkbox</type>
</CustomField>