force-app/main/default/objects/Application__c/fields/applications_funded__c.field-meta.xml
<CustomField>
    <fullName>applications_funded__c</fullName>
    <formula>IF( ISPICKVAL(Decision__c,&apos;Completed&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applications Funded</label>
    <type>Checkbox</type>
</CustomField>