force-app/main/default/objects/Application__c/fields/Authentication_Choice__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Choice__c</fullName>
    <inlineHelpText>Determines if the user selected to Auto Authenticate or not.</inlineHelpText>
    <label>Authentication Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Accepted/Started</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Error-NoBureauHit</fullName>
            </value>
            <value>
                <fullName>Error-ThinBureauHit</fullName>
            </value>
            <value>
                <fullName>Error-TooManyAttempts</fullName>
            </value>
            <value>
                <fullName>Error-SubmittedExamAgain</fullName>
            </value>
            <value>
                <fullName>Error-TechnicalIssue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>