force-app/main/default/objects/Application__c/fields/Authentication_Result__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Result__c</fullName>
    <label>Authentication Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>DeclinedAmount</fullName>
            </value>
            <value>
                <fullName>EmailSent</fullName>
            </value>
            <value>
                <fullName>PassedNoFraud</fullName>
            </value>
            <value>
                <fullName>EmailExpired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>