force-app/main/default/objects/Application__c/fields/Authorized_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authorized Credit Check</label>
    <type>Checkbox</type>
</CustomField>