force-app/main/default/objects/Application__c/fields/auto_processed__c.field-meta.xml
<CustomField>
    <fullName>auto_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Processed</label>
    <type>Checkbox</type>
</CustomField>