force-app/main/default/objects/Application__c/fields/auto_processed_formula__c.field-meta.xml
<CustomField>
    <fullName>auto_processed_formula__c</fullName>
    <formula>IF( auto_processed__c, &apos;Automatic&apos;, &apos;Manual&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automatically Processed</label>
    <type>Text</type>
</CustomField>