force-app/main/default/objects/Application__c/fields/Bankruptcies__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcies__c</fullName>
    <description>Bankruptcies</description>
    <inlineHelpText>Bankruptcies</inlineHelpText>
    <label>Bankruptcies</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>