force-app/main/default/objects/Application__c/fields/Communications_Preference__c.field-meta.xml
<CustomField>
    <fullName>Communications_Preference__c</fullName>
    <label>Communications Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>