force-app/main/default/objects/Application__c/fields/Credit_Score_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Type__c</fullName>
    <label>Credit Score Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>