force-app/main/default/objects/Application__c/fields/Credit_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Credit_Timestamp__c</fullName>
    <label>Credit Timestamp</label>
    <type>DateTime</type>
</CustomField>