force-app/main/default/objects/Application__c/fields/Current_BKCP__c.field-meta.xml
<CustomField>
    <fullName>Current_BKCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current BKCP</label>
    <type>Checkbox</type>
</CustomField>