force-app/main/default/objects/Application__c/fields/Current_Income_Interval__c.field-meta.xml
<CustomField>
    <fullName>Current_Income_Interval__c</fullName>
    <description>Current Income Interval</description>
    <inlineHelpText>Current Income Interval</inlineHelpText>
    <label>Current Income Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>