force-app/main/default/objects/Application__c/fields/Decision_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timestamp__c</fullName>
    <label>Decision Timestamp</label>
    <type>DateTime</type>
</CustomField>