force-app/main/default/objects/Application__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Criteria Not Matched</fullName>
            </value>
            <value>
                <fullName>Application Rank Very Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>