force-app/main/default/objects/Application__c/fields/disbursement__c.field-meta.xml
<CustomField>
    <fullName>disbursement__c</fullName>
    <label>Disbursement Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>