force-app/main/default/objects/Application__c/fields/Disclosure_Statement_Presented__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Statement_Presented__c</fullName>
    <label>Disclosure Statement Presented</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affirm Financial MasterCard - 29.99%</fullName>
            </value>
            <value>
                <fullName>Affirm Financial MasterCard - 34.99%</fullName>
            </value>
            <value>
                <fullName>Affirm Financial Term Loan</fullName>
            </value>
            <value>
                <fullName>Affirm Financial Term Loan Manitoba Residents</fullName>
            </value>
            <value>
                <fullName>Preferred Partner Disclosure Statement</fullName>
            </value>
            <value>
                <fullName>Affirm Financial MasterCard Manitoba Residents - 29.99%</fullName>
            </value>
            <value>
                <fullName>Affirm Financial MasterCard Manitoba Residents - 34.99%</fullName>
            </value>
            <value>
                <fullName>Preferred Partner Disclosure Statement - Manitoba Residents</fullName>
            </value>
            <value>
                <fullName>Affirm Financial MasterCard - 39.99%</fullName>
            </value>
            <value>
                <fullName>Affirm Financial MasterCard Manitoba Residents - 39.99%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>