force-app/main/default/objects/Application__c/fields/DSR_Score__c.field-meta.xml
<CustomField>
    <fullName>DSR_Score__c</fullName>
    <label>DSR Score</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>