force-app/main/default/objects/Application__c/fields/DSR_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>DSR_Timestamp__c</fullName>
    <label>DSR Timestamp</label>
    <type>DateTime</type>
</CustomField>