force-app/main/default/objects/Application__c/fields/Email_Authentication_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Authentication_Expiration_Date__c</fullName>
    <label>Email Authentication Expiration Date</label>
    <type>DateTime</type>
</CustomField>