force-app/main/default/objects/Application__c/fields/Email_Authentication_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Authentication_Sent_Date__c</fullName>
    <inlineHelpText>Date and Time of when email was sent to Applicant.</inlineHelpText>
    <label>Email Authentication Sent Date</label>
    <type>DateTime</type>
</CustomField>