force-app/main/default/objects/Application__c/fields/Email_Authentication_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Authentication_Status__c</fullName>
    <inlineHelpText>Field is blank until email is manually sent to Applicant for Auto Authentication</inlineHelpText>
    <label>Email Authentication Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent to Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>