force-app/main/default/objects/Application__c/fields/Employer_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Employer_PostalCode__c</fullName>
    <label>Employer PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>