force-app/main/default/objects/Application__c/fields/Employer_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Street_Number__c</fullName>
    <label>Employer Address 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>