force-app/main/default/objects/Application__c/fields/Employment_Months__c.field-meta.xml
<CustomField>
    <fullName>Employment_Months__c</fullName>
    <label>Employment Months</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>