force-app/main/default/objects/Application__c/fields/Employment_Years__c.field-meta.xml
<CustomField>
    <fullName>Employment_Years__c</fullName>
    <label>Employment Years</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>