force-app/main/default/objects/Application__c/fields/First_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Amount__c</fullName>
    <label>First Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>