force-app/main/default/objects/Application__c/fields/Fraud_Alert__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Alert__c</fullName>
    <label>Fraud Alert</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>True-N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>