force-app/main/default/objects/Application__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Funded</fullName>
                <default>true</default>
                <label>Auto Funded</label>
            </value>
            <value>
                <fullName>Manually Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>