force-app/main/default/objects/Application__c/fields/Has_Accepted_Personal_Consent_Terms__c.field-meta.xml
<CustomField>
    <fullName>Has_Accepted_Personal_Consent_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Accepted Personal Consent Terms</label>
    <type>Checkbox</type>
</CustomField>