force-app/main/default/objects/Application__c/fields/Home_Owner__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner__c</fullName>
    <label>Home Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own Property</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>