force-app/main/default/objects/Application__c/fields/Housing_Costs__c.field-meta.xml
<CustomField>
    <fullName>Housing_Costs__c</fullName>
    <label>Housing Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>