force-app/main/default/objects/Application__c/fields/How_Heard_of_Affirm__c.field-meta.xml
<CustomField>
    <fullName>How_Heard_of_Affirm__c</fullName>
    <label>How Heard of Affirm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>