force-app/main/default/objects/Application__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Interest Rate</description>
    <inlineHelpText>Interest Rate</inlineHelpText>
    <label>Interest Rate</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>