force-app/main/default/objects/Application__c/fields/Is_Preferred_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Preferred_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Preferred Partner</label>
    <type>Checkbox</type>
</CustomField>