force-app/main/default/objects/Application__c/fields/Loan_Administrator_Review__c.field-meta.xml
<CustomField>
    <fullName>Loan_Administrator_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Administrator Review</label>
    <type>Checkbox</type>
</CustomField>