force-app/main/default/objects/Application__c/fields/Loan_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Application Status</label>
    <type>Checkbox</type>
</CustomField>